--- a/k8s-fleetman-webapp-angular/Jenkinsfile
+++ b/k8s-fleetman-webapp-angular/Jenkinsfile
@@ -16,8 +16,8 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building....'
+                sh "./cd k8s-fleetman-webapp"
                 sh 'scp -r -i $(minikube ssh-key) ./*  docker@$(minikube ip):~/'
-                sh "cd k8s-fleetman-webapp"
                 sh "minikube ssh 'docker build -t webapp:${commit_id} .'"
                 echo 'build complete'
             }
