--- a/k8s-fleetman-webapp-angular/Jenkinsfile
+++ b/k8s-fleetman-webapp-angular/Jenkinsfile
@@ -16,9 +16,9 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building....'
-                sh "./cd k8s-fleetman-webapp"
+                sh "cd ./k8s-fleetman-webapp"
                 sh 'scp -r -i $(minikube ssh-key) ./*  docker@$(minikube ip):~/'
-                sh "minikube ssh 'docker build -t webapp:${commit_id} .'"
+                sh "minikube ssh 'docker build -t webapp:${commit_id} ./'"
                 echo 'build complete'
             }
         }
